committing text overflow fix and variable name update

--- a/components/sla-visualization/sla-tooltip/sla-tooltip.css
+++ b/components/sla-visualization/sla-tooltip/sla-tooltip.css
@@ -82,6 +82,7 @@
     font-weight: normal;
     max-width: 6rem;
     color: var(--cl-text-alt);
+    white-space: normal;
 }
 
 .measurement-content {
